# astrafocus

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  api.html  choosing_focus_measure.html  citation.html  conftest.py  contributing.html  genindex.html  index.html  installation.html  motivation.html  objects.inv  operators_reference.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: python-publish-to-pypi.yml  python-publish-to-testpypi.yml
_modules/: astrafocus.html  index.html
_modules/astrafocus/: autofocuser.html  extremum_estimators.html  focus_measure_operators.html  focus_measure_scan.html  star_finder.html  star_fitter.html  star_size_focus_measure_operators.html
_modules/astrafocus/interface/: camera.html  device_manager.html  focuser.html  simulation.html  telescope.html
_modules/astrafocus/models/: elliptical_moffat_2D.html  half_flux_radius_2D.html
_modules/astrafocus/sql/: local_gaia_database_query.html  shardwise_query.html
_modules/astrafocus/targeting/: airmass_models.html  celestial_bounds_calculator.html  tangential_plane_projector.html  zenith_neighbourhood.html  zenith_neighbourhood_query.html  zenith_neighbourhood_query_result.html
_sources/: api.md  choosing_focus_measure.md  citation.md  contributing.md  index.md  installation.md  motivation.md  operators_reference.md
_sources/notebooks/: getting_started.ipynb
_static/: style.css
docs/source/: api.md  astrafocus.interface.md  astrafocus.md  astrafocus.models.md  astrafocus.sql.md  astrafocus.targeting.md  conf.py  index.md
exploration/: speculoos.yaml
notebooks/: getting_started.html
scr/astrafocus/: autofocuser.py  star_finder.py  star_size_focus_measure_operators.py
scr/astrafocus/interface/: simulation.py
scr/autofocus/: autofocuser.py  focus_measure_operators.py  star_finder.py  star_fitter.py  star_size_focus_measure_operators.py
scr/autofocus/interface/: device_manager.py  focuser.py  pointer.py  simulation.py  telescope.py  telescope_specs.py
scr/autofocus/models/: elliptical_moffat_2D.py
scr/autofocus/sql/: local_gaia_database_query.py  shardwise_query.py
scr/autofocus/targeting/: tangential_plane_projector.py  zenith_neighbourhood.py  zenith_neighbourhood_query.py  zenith_neighbourhood_query_result.py
src/astrafocus/: __init__.py  autofocuser.py  extremum_estimators.py  focus_measure_operators.py  focus_measure_scan.py  star_finder.py  star_fitter.py  star_size_focus_measure_operators.py
src/astrafocus/interface/: __init__.py  alpaca.py  camera.py  device_manager.py  focuser.py  simulation.py  telescope.py  telescope_specs.py
src/astrafocus/models/: elliptical_moffat_2D.py  half_flux_radius_2D.py
src/astrafocus/sql/: __init__.py  local_gaia_database_query.py  remote_gaia_database_query.py  shardwise_query.py
src/astrafocus/targeting/: __init__.py  airmass_models.py  tangential_plane_projector.py  zenith_neighbourhood.py  zenith_neighbourhood_query.py  zenith_neighbourhood_query_result.py
src/astrafocus/utils/: logger.py  plot.py  typing.py
tests/: conftest.py  test_analytic_response_autoffocuser.py  test_analytic_response_autofocuser.py  test_autofocus_device_manager.py  test_focus_measure_scan.py  test_local_gaia_databas_query.py  test_non_parametric_respons_autofocuser.py  test_non_parametric_response_autofocuser.py  test_star_finder.py  test_star_size_focus_measure_operators.py  test_telescope_focuser.py  test_zenith_neighbourhood.py  utils.py
