[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrafocus"
authors = [
    {name = "David Degen", email = "ddegen@ethz.ch"},
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["telescope", "autofocus"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",        
]
dependencies = [
    "astropy",
    "opencv-python",
    "numpy",
    "pandas",
    "photutils",
    "scipy",
    "sqlite3worker",
    "statsmodels",
]
version = '0.1.0'

[project.urls]
"Homepage" = "https://github.com/dgegen/astrafocus"
"Source" = "https://github.com/dgegen/astrafocus"
"Bug Tracker" = "https://github.com/dgegen/astrafocus/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
visualization = ["ipython", "matplotlib", "notebook"]
dash = ["dash", "dash_bootstrap_components", "plotly"]
extended = ["scikit-learn"]
alpaca = ["alpyca"]
dev = [
    "cabaret",
    "matplotlib",
    "ruff",
    "pytest",
]
test = ["pytest", "cabaret"]

[tool.ruff]
line-length = 109
exclude = ["*.yaml"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F", "I001", "UP"]

