[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm", "wheel"]

[dependency-groups]
dev = [
  {include-group = "test"},
  "ruff>=0.15.6",
  "matplotlib",
  "pre-commit>=4.5.1"
]
test = [
  "cabaret>=0.4.5",
  "pytest>=9.0.0"
]

[project]
authors = [
  {email = "ddegen@ethz.ch", name = "David Degen"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers"
]
dependencies = [
  "astropy",
  "opencv-python",
  "numpy",
  "pandas",
  "photutils",
  "scipy",
  "sqlite3worker",
  "statsmodels"
]
description = "A package that provides flexible autofocus procedures for telescopes."
keywords = ["telescope", "autofocus"]
license = {text = "MIT"}
name = "astrafocus"
readme = "README.md"
requires-python = ">=3.11"
version = '0.1.1'

[project.optional-dependencies]
alpaca = ["alpyca"]
dash = ["dash", "dash_bootstrap_components", "plotly"]
docs = ["sphinx", "sphinx-book-theme", "sphinx-design", "sphinx-copybutton", "ipython", "matplotlib", "notebook", "ipywidgets", "myst_nb", "ghp-import", "alpyca"]
extended = ["scikit-learn"]
visualization = ["ipython", "matplotlib", "notebook"]

[project.urls]
"Bug Tracker" = "https://github.com/dgegen/astrafocus/issues"
"Homepage" = "https://github.com/dgegen/astrafocus"
"Source" = "https://github.com/dgegen/astrafocus"

[tool.ruff]
exclude = ["*.yaml"]
extend-include = ["*.ipynb"]
line-length = 109

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F", "I001", "UP"]

[tool.setuptools.packages.find]
where = ["src"]
